# fined_fast

./: .gitignore  ChartCard.css  README.md  package-lock.json
fined_backend/: .env.example  .gitignore  Dockerfile  README.md  error_log.txt  migrate_slugs.py  pyproject.toml
fined_backend/app/: config.py  dependencies.py  main.py
fined_backend/app/integrations/: __init__.py  storage.py  supabase_client.py
fined_backend/app/models/: __init__.py  article.py  card_data.py  common.py  course.py  expense.py  notification.py  product.py  user.py
fined_backend/app/repositories/: __init__.py  article_repo.py  contact_repo.py  course_repo.py  notification_repo.py  product_repo.py  progress_repo.py  transaction_repo.py  user_repo.py
fined_backend/app/routes/: __init__.py  admin.py  articles.py  auth.py  authors.py  cards.py  contact.py  courses.py  expenses.py  home.py  modules.py  products.py
fined_backend/app/services/: __init__.py  article_service.py  contact_service.py  course_service.py  email_service.py  expense_service.py  gmail_service.py  home_service.py  notification_service.py  product_service.py  recommendation_service.py  scheduled_publisher.py  score_service.py
fined_frontend/: index.html  package-lock.json  package.json  vercel.json
fined_frontend/public/: robots.txt  sitemap.xml
fined_frontend/src/: App.jsx  Hero.jsx  index.css
fined_frontend/src/components/: AdminGuard.jsx  ApiTokenProvider.jsx  ArticleReader.jsx  Auth0ProviderWithNavigate.jsx  AuthLoader.jsx  AuthenticationGuard.jsx  Footer.css  Footer.jsx  Navbar.css  Navbar.jsx  PageLoader.jsx  (+2 more)
(+94 files in other folders)
