[tool.poetry]
name = "fined-backend"
version = "0.1.0"
description = "FinEd FastAPI Backend"
authors = ["FinEd Team"]
python = "^3.10"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
supabase = "^2.5.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.27.0"
python-multipart = "^0.0.9"
redis = "^5.0.0"
google-api-python-client = "^2.130.0"
google-auth-oauthlib = "^1.2.0"
aiosmtplib = "^3.0.0"
slowapi = "^0.1.9"
uuid = "^1.30"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"